build and install works

--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
- "name": "Electron-RabbitMQ",
- "version": "1.0.0",
- "description": "",
- "repository": "marcelmaatkamp/electron-rabbitmq",
- "main": "app.js",
- "scripts": {
-  "pack": "electron-builder --dir",
-  "dist": "electron-builder"
- },
- "license": "ISC",
- "devDependencies": {
-  "electron-builder": "^19.37.2"
- },
- "dependencies": {
-  "amqp-ts": "1.4.0",
-  "convict": "^3.0.0",
-  "winston": "^2.4.0"
- },
- "postinstall": "electron-builder install-app-deps"
+  "name": "Prices",
+  "version": "1.0.0",
+  "description": "Prices of commodities",
+  "repository": "electron/simple-samples",
+  "main": "app.js",
+  "scripts": {
+    "start": "electron app.js",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
+  },
+  "license": "ISC",
+  "devDependencies": {
+    "electron": "^1.4.12",
+    "electron-builder": "^19.37.2"
+  },
+  "postinstall": "electron-builder install-app-deps"
 }
