first working version

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Prices",
+  "name": "Electron-RabbitMQ",
   "version": "1.0.0",
-  "description": "Prices of commodities",
-  "repository": "electron/simple-samples",
+  "description": "Display the contents of an exchange in RabbitMQ in a this-is-my-first-application",
+  "repository": "marcelmaatkamp/electron-rabbitmq",
   "main": "app.js",
   "scripts": {
-    "start": "electron app.js",
+    "start": "electron --inspect=5858 app.js",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
   },
@@ -13,6 +13,11 @@
   "devDependencies": {
     "electron": "^1.4.12",
     "electron-builder": "^19.37.2"
+  },
+  "dependencies": {
+    "amqp-ts": "1.4.0",
+    "convict": "^3.0.0",
+    "winston": "^2.4.0"
   },
   "postinstall": "electron-builder install-app-deps"
 }
